kyverno/podsecurity/baseline/kyverno_kubernetes_001.yaml
# policy id: kyverno-kubernetes-001
# reason: enforce organization security control for kubernetes, using Kyverno, Pods must run as non-root
# severity: medium

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-kubernetes-001-require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Pods must run as non-root
    policies.kyverno.io/category: podsecurity
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: Pods must run as non-root.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-nonroot
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Pods must run as non-root.
        pattern:
          spec.securityContext.runAsNonRoot: true
